--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,43 @@
-* {
-    margin: 0;
-    padding: 0;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: linear-gradient(to left, rgb(196, 194, 194), rgb(75, 250, 197));
 }
 
-# .contenedor {
-    width: 200px;
+.header {
+    width: 100%;
+    height: 7em;
+    background: linear-gradient(to left, rgb(196, 194, 194), rgb(75, 250, 197));
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+h2 {
+    font-family: 'Ranchers', cursive;
+}
+
+h3 {
+    font-family: 'Gloria Hallelujah', cursive;
+    color: red;
+}
+
+#contenedor {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-gap: 1em;
+}
+
+#peliculas {
+    justify-self: center;
+}
+
+#peliculas img {
+    width: 10em;
 }
